// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/seed4407/Tarea_distribuidos_3";
option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package grpc;

service Vanguardia{
    rpc GetSoldados (parametro_sector_base) returns (retorno_cant_sold_oscuridad_reloj) {}
}

service Informantes{
    rpc Obtener_servidor_consultar_aleatorio (paramamtro_vacio) returns (servidor_a_consultar) {}
}

message parametro_sector_base {
  string nombre_sector = 1;
  string nombre_base = 2;
}

message retorno_cant_sold_oscuridad_reloj {
    int32 cant_soldados_oscuridad = 1;
    repeated int32 reloj = 2;
}

message  servidor_a_consultar {
  string ip = 1;
}

message paramamtro_vacio {}

message recepcion {
  string ok = 1;
}
